src/automation/lang/AutomationLangParser.java
// $ANTLR 3.4 C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g 2012-04-29 18:53:34

package automation.lang;
import java.util.HashMap;
import java.util.ArrayList;
import java.io.FileWriter;
import java.io.IOException;
import java.util.Collections;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class AutomationLangParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT", "ESC_SEQ", "FLAG", "HEX_DIGIT", "ID", "INT", "NEWLINE", "OCTAL_ESC", "PERCENT", "STRING", "UNICODE_ESC", "WS", "','", "'-'", "'..'", "'...'", "':'", "'='", "'>'", "'\\('", "'\\)'", "'\\['", "']'", "'circular'", "'distribution'", "'end'", "'finite'", "'height'", "'mealy'", "'mode'", "'options'", "'random'", "'width'", "'{'", "'}'", "'~'"
    };

    public static final int EOF=-1;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int CHAR=4;
    public static final int COMMENT=5;
    public static final int ESC_SEQ=6;
    public static final int FLAG=7;
    public static final int HEX_DIGIT=8;
    public static final int ID=9;
    public static final int INT=10;
    public static final int NEWLINE=11;
    public static final int OCTAL_ESC=12;
    public static final int PERCENT=13;
    public static final int STRING=14;
    public static final int UNICODE_ESC=15;
    public static final int WS=16;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AutomationLangParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AutomationLangParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return AutomationLangParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g"; }


       HashMap<String, String> dic = new HashMap<String, String>();
       HashMap<String, ArrayList<String[]>> var_dic = new HashMap<String, ArrayList<String[]>>();
       Tree tree = new Tree();
       String current_from_id;
       String start_id = "";
       String first_id = "";
       String final_id = "";
       String last_id = "";
       boolean in_var_def = false;
       String current_var_def_id = "";

       public State getState(String id){
             if (!dic.containsKey(id)){
                      dic.put(id, id);
                      return tree.createState(id, false);
             } else {
                      return (State)tree.getState(dic.get(id));
             }
       }

       public String gsv(String text){
             if (text == null || text.length() <= 2) return "";
             return text.substring(1, text.length() - 1);
       }

       public int ipar(String text){
             if(text == null) return -1;
             return Integer.parseInt(text);
       }

       public double perc(String text){
             if (text == null || text.length() <= 2) return 0;
             return Integer.parseInt(text.substring(0, text.length() - 1)) / 100.0;
       }

       public static Tree saveCodeInFileAndParseToTree(String code, String file) throws IOException, RecognitionException {
             AutomationLangParser parser = new AutomationLangParser(Utils.saveCodeInFileAndGetTokenStream(code, file));
             parser.prog();
             return parser.getTree();
       }

       public Tree getTree(){
             return tree;
       }

       public boolean varExists(String id){
          return var_dic.containsKey(id);
       }

       public boolean singleVarExists(String id){
          if (!varExists(id)) return false;
          ArrayList<String[]> list = var_dic.get(id);
          return list.size() == 1;
       }

       public ArrayList<String[]> getVarValue(String id){
          return (ArrayList<String[]>)var_dic.get(id);
       }

       public String getSingleVarValue(String id){
          return ((ArrayList<String[]>)var_dic.get(id)).get(0)[0];
       }

       public void setVar(String id, String value){
          ArrayList<String[]> list = new ArrayList<String[]>();
          list.add(new String[]{value, ""});
          setVar(id, list);
       }

       public void setVar(String id, ArrayList<String[]> list){
          var_dic.put(id, list);
       }



    // $ANTLR start "prog"
    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:90:1: prog : ( stat )* ;
    public final void prog() throws RecognitionException {
        try {
            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:90:5: ( ( stat )* )
            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:90:7: ( stat )*
            {
            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:90:7: ( stat )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID||LA1_0==NEWLINE||LA1_0==18||LA1_0==23||LA1_0==35) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:90:7: stat
            	    {
            	    pushFollow(FOLLOW_stat_in_prog32);
            	    stat();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            if (final_id == "" && last_id != "") getState(last_id).setFinal_state(true); tree.redistributeStates();

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "prog"



    // $ANTLR start "stat"
    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:93:1: stat : ( ( declaration | transition | var_def | options_rule ) ( NEWLINE | EOF ) | NEWLINE );
    public final void stat() throws RecognitionException {
        try {
            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:93:6: ( ( declaration | transition | var_def | options_rule ) ( NEWLINE | EOF ) | NEWLINE )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID||LA3_0==18||LA3_0==23||LA3_0==35) ) {
                alt3=1;
            }
            else if ( (LA3_0==NEWLINE) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:93:8: ( declaration | transition | var_def | options_rule ) ( NEWLINE | EOF )
                    {
                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:93:8: ( declaration | transition | var_def | options_rule )
                    int alt2=4;
                    switch ( input.LA(1) ) {
                    case ID:
                        {
                        switch ( input.LA(2) ) {
                        case 22:
                            {
                            alt2=3;
                            }
                            break;
                        case EOF:
                        case NEWLINE:
                        case STRING:
                        case 21:
                        case 26:
                            {
                            alt2=1;
                            }
                            break;
                        case 18:
                            {
                            alt2=2;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 2, 1, input);

                            throw nvae;

                        }

                        }
                        break;
                    case 18:
                    case 23:
                        {
                        alt2=2;
                        }
                        break;
                    case 35:
                        {
                        alt2=4;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 0, input);

                        throw nvae;

                    }

                    switch (alt2) {
                        case 1 :
                            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:93:9: declaration
                            {
                            pushFollow(FOLLOW_declaration_in_stat47);
                            declaration();

                            state._fsp--;


                            }
                            break;
                        case 2 :
                            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:93:23: transition
                            {
                            pushFollow(FOLLOW_transition_in_stat51);
                            transition();

                            state._fsp--;


                            }
                            break;
                        case 3 :
                            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:93:36: var_def
                            {
                            pushFollow(FOLLOW_var_def_in_stat55);
                            var_def();

                            state._fsp--;


                            }
                            break;
                        case 4 :
                            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:93:46: options_rule
                            {
                            pushFollow(FOLLOW_options_rule_in_stat59);
                            options_rule();

                            state._fsp--;


                            }
                            break;

                    }


                    if ( input.LA(1)==EOF||input.LA(1)==NEWLINE ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }


                    }
                    break;
                case 2 :
                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:94:4: NEWLINE
                    {
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_stat73); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "stat"



    // $ANTLR start "options_rule"
    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:97:1: options_rule : 'options' ( NEWLINE | '{' ( NEWLINE )? ) ( ( option_line )? NEWLINE )* ( 'end' NEWLINE | '}' ( NEWLINE )? ) ;
    public final void options_rule() throws RecognitionException {
        try {
            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:2: ( 'options' ( NEWLINE | '{' ( NEWLINE )? ) ( ( option_line )? NEWLINE )* ( 'end' NEWLINE | '}' ( NEWLINE )? ) )
            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:4: 'options' ( NEWLINE | '{' ( NEWLINE )? ) ( ( option_line )? NEWLINE )* ( 'end' NEWLINE | '}' ( NEWLINE )? )
            {
            match(input,35,FOLLOW_35_in_options_rule85); 

            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:14: ( NEWLINE | '{' ( NEWLINE )? )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==NEWLINE) ) {
                alt5=1;
            }
            else if ( (LA5_0==38) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:15: NEWLINE
                    {
                    match(input,NEWLINE,FOLLOW_NEWLINE_in_options_rule88); 

                    }
                    break;
                case 2 :
                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:25: '{' ( NEWLINE )?
                    {
                    match(input,38,FOLLOW_38_in_options_rule92); 

                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:29: ( NEWLINE )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==NEWLINE) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:29: NEWLINE
                            {
                            match(input,NEWLINE,FOLLOW_NEWLINE_in_options_rule94); 

                            }
                            break;

                    }


                    }
                    break;

            }


            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:39: ( ( option_line )? NEWLINE )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==NEWLINE||LA7_0==29||LA7_0==32||LA7_0==34||LA7_0==37) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:40: ( option_line )? NEWLINE
            	    {
            	    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:40: ( option_line )?
            	    int alt6=2;
            	    int LA6_0 = input.LA(1);

            	    if ( (LA6_0==29||LA6_0==32||LA6_0==34||LA6_0==37) ) {
            	        alt6=1;
            	    }
            	    switch (alt6) {
            	        case 1 :
            	            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:40: option_line
            	            {
            	            pushFollow(FOLLOW_option_line_in_options_rule99);
            	            option_line();

            	            state._fsp--;


            	            }
            	            break;

            	    }


            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_options_rule102); 

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:63: ( 'end' NEWLINE | '}' ( NEWLINE )? )
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==30) ) {
                alt9=1;
            }
            else if ( (LA9_0==39) ) {
                alt9=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;

            }
            switch (alt9) {
                case 1 :
                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:64: 'end' NEWLINE
                    {
                    match(input,30,FOLLOW_30_in_options_rule107); 

                    match(input,NEWLINE,FOLLOW_NEWLINE_in_options_rule109); 

                    }
                    break;
                case 2 :
                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:80: '}' ( NEWLINE )?
                    {
                    match(input,39,FOLLOW_39_in_options_rule113); 

                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:84: ( NEWLINE )?
                    int alt8=2;
                    int LA8_0 = input.LA(1);

                    if ( (LA8_0==NEWLINE) ) {
                        int LA8_1 = input.LA(2);

                        if ( (LA8_1==EOF) ) {
                            int LA8_2 = input.LA(3);

                            if ( (LA8_2==EOF||LA8_2==ID||LA8_2==NEWLINE||LA8_2==18||LA8_2==23||LA8_2==35) ) {
                                alt8=1;
                            }
                        }
                        else if ( (LA8_1==NEWLINE) ) {
                            alt8=1;
                        }
                    }
                    switch (alt8) {
                        case 1 :
                            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:98:84: NEWLINE
                            {
                            match(input,NEWLINE,FOLLOW_NEWLINE_in_options_rule115); 

                            }
                            break;

                    }


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "options_rule"



    // $ANTLR start "option_line"
    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:101:1: option_line : ( 'mode' ':' ( 'finite' | 'mealy' ) | 'distribution' ':' ( 'random' | 'circular' ) | 'width' ':' INT | 'height' ':' INT );
    public final void option_line() throws RecognitionException {
        Token INT1=null;
        Token INT2=null;

        try {
            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:102:2: ( 'mode' ':' ( 'finite' | 'mealy' ) | 'distribution' ':' ( 'random' | 'circular' ) | 'width' ':' INT | 'height' ':' INT )
            int alt12=4;
            switch ( input.LA(1) ) {
            case 34:
                {
                alt12=1;
                }
                break;
            case 29:
                {
                alt12=2;
                }
                break;
            case 37:
                {
                alt12=3;
                }
                break;
            case 32:
                {
                alt12=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 12, 0, input);

                throw nvae;

            }

            switch (alt12) {
                case 1 :
                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:102:4: 'mode' ':' ( 'finite' | 'mealy' )
                    {
                    match(input,34,FOLLOW_34_in_option_line129); 

                    match(input,21,FOLLOW_21_in_option_line131); 

                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:102:15: ( 'finite' | 'mealy' )
                    int alt10=2;
                    int LA10_0 = input.LA(1);

                    if ( (LA10_0==31) ) {
                        alt10=1;
                    }
                    else if ( (LA10_0==33) ) {
                        alt10=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 10, 0, input);

                        throw nvae;

                    }
                    switch (alt10) {
                        case 1 :
                            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:103:5: 'finite'
                            {
                            match(input,31,FOLLOW_31_in_option_line139); 

                            tree.setMode(Tree.Mode.FINITE);

                            }
                            break;
                        case 2 :
                            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:104:5: 'mealy'
                            {
                            match(input,33,FOLLOW_33_in_option_line147); 

                            tree.setMode(Tree.Mode.MEALY);

                            }
                            break;

                    }


                    }
                    break;
                case 2 :
                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:106:4: 'distribution' ':' ( 'random' | 'circular' )
                    {
                    match(input,29,FOLLOW_29_in_option_line158); 

                    match(input,21,FOLLOW_21_in_option_line160); 

                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:106:23: ( 'random' | 'circular' )
                    int alt11=2;
                    int LA11_0 = input.LA(1);

                    if ( (LA11_0==36) ) {
                        alt11=1;
                    }
                    else if ( (LA11_0==28) ) {
                        alt11=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 11, 0, input);

                        throw nvae;

                    }
                    switch (alt11) {
                        case 1 :
                            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:107:5: 'random'
                            {
                            match(input,36,FOLLOW_36_in_option_line168); 

                            tree.setDistributionMode(4);

                            }
                            break;
                        case 2 :
                            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:108:5: 'circular'
                            {
                            match(input,28,FOLLOW_28_in_option_line176); 

                            tree.setDistributionMode(5);

                            }
                            break;

                    }


                    }
                    break;
                case 3 :
                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:110:4: 'width' ':' INT
                    {
                    match(input,37,FOLLOW_37_in_option_line187); 

                    match(input,21,FOLLOW_21_in_option_line189); 

                    INT1=(Token)match(input,INT,FOLLOW_INT_in_option_line191); 

                    tree.setPaintWidth(ipar((INT1!=null?INT1.getText():null)));

                    }
                    break;
                case 4 :
                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:111:4: 'height' ':' INT
                    {
                    match(input,32,FOLLOW_32_in_option_line199); 

                    match(input,21,FOLLOW_21_in_option_line201); 

                    INT2=(Token)match(input,INT,FOLLOW_INT_in_option_line203); 

                    tree.setPaintHeight(ipar((INT2!=null?INT2.getText():null)));

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "option_line"



    // $ANTLR start "declaration"
    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:114:1: declaration : ID ( STRING )? ( ':' f1= FLAG ( ',' f2= FLAG )* )? opt_position ;
    public final void declaration() throws RecognitionException {
        Token f1=null;
        Token f2=null;
        Token STRING3=null;
        Token ID4=null;
        AutomationLangParser.opt_position_return opt_position5 =null;


        ArrayList<String> flags = new ArrayList<String>();
        try {
            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:116:2: ( ID ( STRING )? ( ':' f1= FLAG ( ',' f2= FLAG )* )? opt_position )
            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:116:4: ID ( STRING )? ( ':' f1= FLAG ( ',' f2= FLAG )* )? opt_position
            {
            ID4=(Token)match(input,ID,FOLLOW_ID_in_declaration222); 

            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:116:7: ( STRING )?
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( (LA13_0==STRING) ) {
                alt13=1;
            }
            switch (alt13) {
                case 1 :
                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:116:7: STRING
                    {
                    STRING3=(Token)match(input,STRING,FOLLOW_STRING_in_declaration224); 

                    }
                    break;

            }


            // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:116:15: ( ':' f1= FLAG ( ',' f2= FLAG )* )?
            int alt15=2;
            int LA15_0 = input.LA(1);

            if ( (LA15_0==21) ) {
                alt15=1;
            }
            switch (alt15) {
                case 1 :
                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:116:16: ':' f1= FLAG ( ',' f2= FLAG )*
                    {
                    match(input,21,FOLLOW_21_in_declaration228); 

                    f1=(Token)match(input,FLAG,FOLLOW_FLAG_in_declaration232); 

                    flags.add((f1!=null?f1.getText():null));

                    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:116:51: ( ',' f2= FLAG )*
                    loop14:
                    do {
                        int alt14=2;
                        int LA14_0 = input.LA(1);

                        if ( (LA14_0==17) ) {
                            alt14=1;
                        }


                        switch (alt14) {
                    	case 1 :
                    	    // C:\\Users\\Johannes\\Code\\Automation\\src\\automation\\lang\\AutomationLang.g:116:52: ',' f2= FLAG
                    	    {
                    	    match(input,17,FOLLOW_17_in_declaration237); 

